; ModuleID = '/home/carl/AnghaBench/postgres/src/pl/plperl/extr_plperl.c__sv_to_datum_finfo.c'
source_filename = "/home/carl/AnghaBench/postgres/src/pl/plperl/extr_plperl.c__sv_to_datum_finfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, i32*)* @_sv_to_datum_finfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_sv_to_datum_finfo(i32 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load i32*, i32** %6, align 8
  %10 = call i32 @getTypeInputInfo(i32 %8, i32* %7, i32* %9)
  %11 = load i32, i32* %7, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @fmgr_info(i32 %11, i32* %12)
  ret void
}

declare dso_local i32 @getTypeInputInfo(i32, i32*, i32*) #1

declare dso_local i32 @fmgr_info(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
